// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing of StoredCardsPage -> Layout of StoredCardsPage check if the "No credentials found" layout is matching with snapshot 1`] = `
<DocumentFragment>
  <div
    class="mx-auto sm:px-2 md:px-4 lg:px-6 pb-1 sm:pb-0 relative ml-3 sm:ml-0 flex-1 relative h-full flex flex-col"
  >
    <div
      class="flex flex-col sm:flex-row justify-between ml-5 sm:ml-7 sm:items-center items-start mb-4 sm:mb-6 gap-4 sm:gap-0 lg:mr-20 sm:items-start sm:mr-0"
      data-testid="page-title-container"
    >
      <div
        class="flex items-start"
      >
        <div
          class="flex items-start"
        >
          <svg
            class="mr-2 cursor-pointer"
            data-testid="Back-Arrow-Icon"
            fill="none"
            height="29"
            viewBox="0 0 24 18"
            width="29"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              fill="#000000"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start mr-0.5"
        >
          <span
            class="text-2xl font-medium"
            data-testid="title-stored-credentials"
          >
            Stored Cards
          </span>
          <button
            class="text-xs sm:text-sm text-[#5B03AD] cursor-pointer"
            data-testid="btn-home"
          >
            Home
          </button>
        </div>
      </div>
      <div
        class="hidden sm:block mr-4 md:mr-2 lg:mr-2"
      >
        <div
          class=""
        >
          <div
            class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
          >
            <button
              class="text-white font-bold rounded-lg"
              data-testid="btn-add-cards"
            >
              Add Cards
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-between h-full sm:ml-8"
      data-testid="content-and-action-container"
    >
      <div
        class="ml-6 mr-4 md:mr-20 lg:mr-20 overflow-y-auto flex-1"
      >
        <div
          class="bg-white rounded-lg shadow-iw-layout p-6 sm:p-5 md:p-10 flex flex-col items-center justify-center min-h-[400px] sm:min-h-[450px] mt-4 sm:mt-8"
          data-testid="no-credentials-downloaded-container"
        >
          <svg
            class="mb-8 sm:mb-12"
            data-testid="icon-document"
            fill="none"
            height="88"
            viewBox="0 0 68 88"
            width="88"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.847 88C15.611 88 13.744 87.246 12.246 85.739C10.749 84.231 10 82.353 10 80.102V7.898C10 5.647 10.749 3.769 12.246 2.261C13.744 0.754 15.611 0 17.847 0H56.143L78 22V80.102C78 82.353 77.251 84.231 75.754 85.739C74.256 87.246 72.389 88 70.153 88H17.847ZM53.714 24.444H73.143L53.714 4.889V24.444ZM27 70.889H61V66H27V70.889ZM27 51.333H61V46.444H27V51.333Z"
              fill="#DEDEDE"
            />
          </svg>
          <div
            class="inline-flex flex-col items-center max-w-[370px]"
          >
            <h2
              class="text-xl text-center sm:text-2xl font-medium text-gray-800 mb-2"
              data-testid="no-credentials-downloaded-title"
            >
              No Cards Stored!
            </h2>
            <span
              class="text-[var(--iw-color-info)] font-normal text-sm break-words justify-center text-center"
              data-testid="no-credentials-downloaded-message"
            >
              You haven't downloaded any cards yet. Tap "Add Cards" to get started.
            </span>
          </div>
          <div
            class="container max-w-full pt-7 mt-3 block sm:hidden"
          >
            <div
              class=""
            >
              <div
                class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
              >
                <button
                  class="text-white font-bold rounded-lg"
                  data-testid="btn-add-cards"
                >
                  Add Cards
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Testing of StoredCardsPage -> Layout of StoredCardsPage check if the loading layout is matching with snapshot 1`] = `
<DocumentFragment>
  <div
    class="mx-auto sm:px-2 md:px-4 lg:px-6 pb-1 sm:pb-0 relative ml-3 sm:ml-0 flex-1 relative h-full flex flex-col"
  >
    <div
      class="flex flex-col sm:flex-row justify-between ml-5 sm:ml-7 sm:items-center items-start mb-4 sm:mb-6 gap-4 sm:gap-0 lg:mr-20 sm:items-start sm:mr-0"
      data-testid="page-title-container"
    >
      <div
        class="flex items-start"
      >
        <div
          class="flex items-start"
        >
          <svg
            class="mr-2 cursor-pointer"
            data-testid="Back-Arrow-Icon"
            fill="none"
            height="29"
            viewBox="0 0 24 18"
            width="29"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              fill="#000000"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start mr-0.5"
        >
          <span
            class="text-2xl font-medium"
            data-testid="title-stored-credentials"
          >
            Stored Cards
          </span>
          <button
            class="text-xs sm:text-sm text-[#5B03AD] cursor-pointer"
            data-testid="btn-home"
          >
            Home
          </button>
        </div>
      </div>
      <div
        class="hidden sm:block mr-4 md:mr-2 lg:mr-2"
      >
        <div
          class=""
        >
          <div
            class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
          >
            <button
              class="text-white font-bold rounded-lg"
              data-testid="btn-add-cards"
            >
              Add Cards
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-between h-full sm:ml-8"
      data-testid="content-and-action-container"
    >
      <div
        class="ml-6 mr-4 md:mr-20 lg:mr-20 overflow-y-auto flex-1"
      >
        <div
          class="flex items-center justify-center min-h-screen w-full"
          data-testid="loader-credentials"
        >
          <div
            class="flex justify-center items-center"
            data-testid="SpinningLoader-Container"
          >
            <div
              aria-busy="true"
              aria-label="oval-loading"
              class="sc-beySPh gZmPOF"
              data-testid="oval-loading"
              role="progressbar"
            >
              <svg
                data-testid="oval-svg"
                height="80"
                stroke="var(--iw-color-spinningLoaderPrimary)"
                viewBox="-20.5 -20.5 43 43"
                width="80"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <g
                    data-testid="oval-secondary-group"
                    stroke-width="3"
                    transform="translate(1 1)"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="20"
                      stroke="var(--iw-color-spinningLoaderSecondary)"
                      stroke-opacity=".5"
                      stroke-width="3"
                    />
                    <path
                      d="M20 0c0-9.94-8.06-20-20-20"
                    >
                      <animatetransform
                        attributeName="transform"
                        dur="1s"
                        from="0 0 0"
                        repeatCount="indefinite"
                        to="360 0 0"
                        type="rotate"
                      />
                    </path>
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Testing of StoredCardsPage -> Layout of StoredCardsPage should check if error while fetching credentials is matching snapshot 1`] = `
<DocumentFragment>
  <div
    class="mx-auto sm:px-2 md:px-4 lg:px-6 pb-1 sm:pb-0 relative ml-3 sm:ml-0 flex-1 relative h-full flex flex-col"
  >
    <div
      class="flex flex-col sm:flex-row justify-between ml-5 sm:ml-7 sm:items-center items-start mb-4 sm:mb-6 gap-4 sm:gap-0 lg:mr-20 sm:items-start sm:mr-0"
      data-testid="page-title-container"
    >
      <div
        class="flex items-start"
      >
        <div
          class="flex items-start"
        >
          <svg
            class="mr-2 cursor-pointer"
            data-testid="Back-Arrow-Icon"
            fill="none"
            height="29"
            viewBox="0 0 24 18"
            width="29"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              fill="#000000"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start mr-0.5"
        >
          <span
            class="text-2xl font-medium"
            data-testid="title-stored-credentials"
          >
            Stored Cards
          </span>
          <button
            class="text-xs sm:text-sm text-[#5B03AD] cursor-pointer"
            data-testid="btn-home"
          >
            Home
          </button>
        </div>
      </div>
      <div
        class="hidden sm:block mr-4 md:mr-2 lg:mr-2"
      >
        <div
          class=""
        >
          <div
            class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
          >
            <button
              class="text-white font-bold rounded-lg"
              data-testid="btn-add-cards"
            >
              Add Cards
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-between h-full sm:ml-8"
      data-testid="content-and-action-container"
    >
      <div
        class="ml-6 mr-4 md:mr-20 lg:mr-20 overflow-y-auto flex-1"
      >
        <div
          class="bg-white rounded-lg shadow-iw-layout p-6 sm:p-5 md:p-10 flex flex-col items-center justify-center min-h-[400px] sm:min-h-[450px] mt-4 sm:mt-8"
          data-testid="error-container-stored-credentials"
        >
          <div
            class="rounded-full p-2 shadow bg-white max-w-fit m-4"
          >
            <div
              class="rounded-full p-8 bg-iw-shieldErrorShadow max-w-fit"
            >
              <svg
                color="var(--iw-color-shieldErrorIcon)"
                data-testid="error-exclamation-icon"
                fill="currentColor"
                height="40"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.8 11.8 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7 7 0 0 0 1.048-.625 11.8 11.8 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.54 1.54 0 0 0-1.044-1.263 63 63 0 0 0-2.887-.87C9.843.266 8.69 0 8 0m-.55 8.502L7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0M8.002 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <p
            class="text-base font-semibold my-1.5"
            data-testid="error-message-stored-credentials"
          >
            No Internet Connection
          </p>
          <p
            class="px-10 text-sm-plus text-center font-light"
            data-testid="error-helpText-stored-credentials"
          >
            Please check your internet connection and try again.
          </p>
          <div
            class="mt-6 w-max flex justify-center"
            data-testid="error-action-block-stored-credentials"
          >
            <div
              class=""
            >
              <div
                class="bg-gradient-to-r rounded-lg text-center cursor-pointer shadow hover:shadow-lg from-iw-primary to-iw-secondary p-0.5"
              >
                <div
                  class="py-2 px-4 rounded-lg bg-white"
                >
                  <button
                    class="text-iw-tertiary font-bold rounded-lg"
                    data-testid="btn-go-home"
                  >
                    <span
                      class="bg-gradient-to-r from-iw-primary to-iw-secondary bg-clip-text text-md font-bold text-transparent"
                    >
                      Go to Home
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Testing of StoredCardsPage -> Layout of StoredCardsPage should check if listing of credentials is matching snapshot 1`] = `
<DocumentFragment>
  <div
    class="mx-auto sm:px-2 md:px-4 lg:px-6 pb-1 sm:pb-0 relative ml-3 sm:ml-0 flex-1 relative h-full flex flex-col"
  >
    <div
      class="flex flex-col sm:flex-row justify-between ml-5 sm:ml-7 sm:items-center items-start mb-4 sm:mb-6 gap-4 sm:gap-0 lg:mr-20 sm:items-start sm:mr-0"
      data-testid="page-title-container"
    >
      <div
        class="flex items-start"
      >
        <div
          class="flex items-start"
        >
          <svg
            class="mr-2 cursor-pointer"
            data-testid="Back-Arrow-Icon"
            fill="none"
            height="29"
            viewBox="0 0 24 18"
            width="29"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              fill="#000000"
            />
          </svg>
        </div>
        <div
          class="flex flex-col items-start mr-0.5"
        >
          <span
            class="text-2xl font-medium"
            data-testid="title-stored-credentials"
          >
            Stored Cards
          </span>
          <button
            class="text-xs sm:text-sm text-[#5B03AD] cursor-pointer"
            data-testid="btn-home"
          >
            Home
          </button>
        </div>
      </div>
      <div
        class="hidden sm:block mr-4 md:mr-2 lg:mr-2"
      >
        <div
          class=""
        >
          <div
            class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
          >
            <button
              class="text-white font-bold rounded-lg"
              data-testid="btn-add-cards"
            >
              Add Cards
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col justify-between h-full sm:ml-8"
      data-testid="content-and-action-container"
    >
      <div
        class="ml-6 mr-4 md:mr-20 lg:mr-20 overflow-y-auto flex-1"
      >
        <div
          class="flex justify-between"
        >
          <div
            class="w-full flex justify-center items-center bg-iw-background shadow-iw sm:w-full rounded-md m-2"
            data-testid="search-credentials-container"
          >
            <svg
              class="m-5"
              color="var(--iw-color-searchIcon)"
              data-testid="icon-search"
              fill="currentColor"
              height="22"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <input
              class="py-6 w-11/12 flex text-iw-searchTitle focus:outline-none overflow-ellipsis mr-10"
              data-testid="input-search"
              placeholder="Search your cards by Name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <div
            class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full gap-1"
            data-testid="credentials"
          >
            <div
              class="bg-iw-tileBackground grid grid-cols-[auto_auto_auto] gap-4 items-center shadow hover:shadow-lg hover:scale-105 hover:shadow-iw-selectedShadow p-4 m-2 rounded-md cursor-pointer"
              data-testid="vc-card-view"
              role="menuitem"
              tabindex="0"
            >
              <img
                alt="Credential Type Logo"
                class="w-20 h-20"
                data-testid="issuer-logo"
                src="logo1.png"
              />
              <span
                class="text-sm font-semibold text-iw-title"
                data-testid="credential-type-display-name"
              >
                Drivers License
              </span>
            </div>
            <div
              class="bg-iw-tileBackground grid grid-cols-[auto_auto_auto] gap-4 items-center shadow hover:shadow-lg hover:scale-105 hover:shadow-iw-selectedShadow p-4 m-2 rounded-md cursor-pointer"
              data-testid="vc-card-view"
              role="menuitem"
              tabindex="0"
            >
              <img
                alt="Credential Type Logo"
                class="w-20 h-20"
                data-testid="issuer-logo"
                src="logo2.png"
              />
              <span
                class="text-sm font-semibold text-iw-title"
                data-testid="credential-type-display-name"
              >
                Health Card
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="block sm:hidden px-4 mx-4 py-2 sticky mt-auto sm:mt-0 sm:static absolute bottom-0 left-0 right-0 z-10"
      >
        <div
          class=""
        >
          <div
            class="w-full bg-iw-primary text-center cursor-pointer items-center text-iw-text font-bold text-sm px-6 py-3 rounded-lg shadow hover:shadow-lg mr-1  bg-gradient-to-r from-iw-primary to-iw-secondary "
          >
            <button
              class="text-white font-bold rounded-lg"
              data-testid="btn-add-cards"
            >
              Add Cards
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
